<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add_note" android:title="Add note"></item>
    <item android:id="@+id/settings" android:title="Settings"></item>
    <item android:id="@+id/log_out" android:title="Log Out"></item>
</menu>